fixed spacing issue from help message

--- a/deploy/web/gameapp/src/pages/GamePage/ChatDisplay/ChatMessages/styles.css
+++ b/deploy/web/gameapp/src/pages/GamePage/ChatDisplay/ChatMessages/styles.css
@@ -17,10 +17,12 @@
 }
 
 .message.me {
+  display: block;
   float: left;
 }
 
 .message.other {
+  display: block;
   float: right;
 }
 
@@ -262,6 +264,7 @@
   height: 48em;
   width: 100%;
   z-index: 1;
+  margin-bottom: 6em;
 }
 
 .help-question__container {
